==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

Xxx 2018 (bgol, horizon branch):
. Item maintenance.
. Two new Ships (Alliance Chieftain, Type-10 Defender).

Oct 2017 (bgol, horizon branch):
. Item maintenance.
. Journal plugin just skips faulty lines.
. Updated EDAPI plugin to version 4.3.1
  - Reworked "/market" and "/shipyard" check from cAPI.

Sep 2017 (bgol, horizon branch):
. Item cleanup (just ignore all the errors about "Cooling Hoses").

Sep 23 2017 (bgol, horizon branch):
. Updated EDAPI plugin to version 4.3.0
  - Added "/market" and "/shipyard" check from cAPI.
  - Get station data from the new "services" entry if available.
  - Updated item handling for upcoming ED 2.4 cAPI changes.
. Updated Journal plugin to use "StationServices" if available.
. Data update from maddavo.

Jul 03 2017 (bgol, horizon branch):
. Updated EDAPI plugin to version 4.2.0
  - Added "login" option.
  - EDDN Server Migration

May 31 2017 (bgol, horizon branch):
. Updated Journal plugin to ignore all events in multicrew.
. Missed the station command to output the category name.
. Item 'Neofabric Insulation' is only in category 'Industrial Materials'.
. Some new salvage items and updated average prices.

May 23 2017 (bgol, horizon branch):
. Don't change the planetary state if updating via the station command
  without specifying it.
. Updated EDAPI plugin to version 4.1.1
. Updated Journal plugin to recognise the "Location" event.
. Updated Journal plugin to recognise the "MarketSell" event to capture
  black market sales.

May 22 2017 (bgol, horizon branch):
. Updated buy, rares, run and trade command to also output the
  category name of the item if more details are requested.
. Data update from maddavo.

May 21 2017 (bgol, horizon branch):
. Updated some ship prices.